--- a/MEAP-SFT/requirements.txt
+++ b/MEAP-SFT/requirements.txt
@@ -7,10 +7,11 @@ bitsandbytes==0.43.3
 triton==3.0.0
 sentencepiece==0.2.0
 trl==0.8.6
-pandas==2.2.3
+pandas==1.24.4
 numpy==2.1.3
 safetensors==0.4.5
 tiktoken==0.8.0
 loguru==0.7.3
 deepspeed==0.16.3
 tensorboard==2.18.0
+scipy==1.14.1
